# DS_Project_B

./: README.md
NLP/: 42671.txt  README.md  character_relationships.gml  characters.csv  characters_updated.csv  clean_book.txt  co_reference resolution.py  config.cfg  conslidated_relationships.csv  consolidated_relationships.csv  main.py  main1.py  main2_pattern.py  main3_updated.py  post_process_updated.py  post_processing.py  pre_process.py  pyproject.toml  resolved_book.txt  test.py  test1.py
NLP/entity_link/: contents
NLP/entity_link/kb/: contents
NLP/results/: character_relationships.gml  character_relationships_weighted.gml  conslidated_relationships_by_100token.csv  conslidated_relationships_by_chapter.csv  conslidated_relationships_by_paragraph.csv  conslidated_relationships_by_sentence.csv  relationship_pivot_summary.csv  relationship_pivot_summary_by_chapter.csv  relationship_pivot_summary_by_paragraph.csv  relationship_pivot_summary_by_sentence.csv  relationships_with_counts.csv  relationships_with_counts_by_100token.csv  relationships_with_counts_by_chapter.csv  relationships_with_counts_by_paragraph.csv  relationships_with_counts_by_sentence.csv
